@@ -684,8 +684,9 @@ Complex optargs:
 --output-encoding=<name[:handler]>, -o<name[:handler]>
                         Specify the text encoding for output.
 -f <[path]filename>     Send output to file.
+-d <src dest>           Use diff from <src> to <dest>.
+--bogus=<x y z>         Bogus 3D coordinates.
 """,
-# -d <src dest>           Use diff from <src> to <dest>.
 """\
 <document source="test data">
     <paragraph>
@@ -726,18 +727,29 @@ Complex optargs:
             <description>
                 <paragraph>
                     Send output to file.
+        <option_list_item>
+            <option_group>
+                <option>
+                    <option_string>
+                        -d
+                    <option_argument delimiter=" ">
+                        <src dest>
+            <description>
+                <paragraph>
+                    Use diff from <src> to <dest>.
+        <option_list_item>
+            <option_group>
+                <option>
+                    <option_string>
+                        --bogus
+                    <option_argument delimiter="=">
+                        <x y z>
+            <description>
+                <paragraph>
+                    Bogus 3D coordinates.
 """],
-#         <option_list_item>
-#             <option_group>
-#                 <option>
-#                     <option_string>
-#                         -d
-#                     <option_argument delimiter=" ">
-#                         <src dest>
-#             <description>
-#                 <paragraph>
-#                     Use diff from <src> to <dest>.
 ]
+
 
 if __name__ == '__main__':
     import unittest
